--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,17 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+             <link rel="stylesheet" type="text/css" href="{{asset("css/pagelayout.css")}}"/>
+            <link rel="stylesheet" type="text/css" href="{{asset("css/hotelcard.css")}}"/>
+            <link rel="stylesheet" type="text/css" href="{{asset("css/buttons.css")}}"/>
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
+        <footer> <h1> Made by Mohamed Amien Selmi </h1> </footer>
     </body>
 </html>
